    INCOMPATIBILITY.
  * The generated constants "xxx_case" and "xxx_rec" have been renamed
    "case_xxx" and "rec_xxx" (e.g., "prod_case" ~> "case_prod").
    INCOMPATIBILITY.
  * The constant "xxx_(un)fold" and related theorems are no longer generated.
    Use "xxx_(co)rec" or define "xxx_(un)fold" manually using "prim(co)rec".
    INCOMPATIBILITY.

* Old datatype package:
  * The generated theorems "xxx.cases" and "xxx.recs" have been renamed
    "xxx.case" and "xxx.rec" (e.g., "sum.cases" -> "sum.case").
    INCOMPATIBILITY.
  * The generated constants "xxx_case", "xxx_rec", and "xxx_size" have been
    renamed "case_xxx", "rec_xxx", and "size_xxx" (e.g., "prod_case" ~>
    "case_prod").
    INCOMPATIBILITY.

* The types "'a list" and "'a option", their set and map functions, their
  relators, and their selectors are now produced using the new BNF-based
  datatype package.
  Renamed constants:
    Option.set ~> set_option
    Option.map ~> map_option
    option_rel ~> rel_option
  Renamed theorems:
    set_def ~> set_rec[abs_def]
    map_def ~> map_rec[abs_def]
    Option.map_def ~> map_option_case[abs_def] (with "case_option" instead of "rec_option")
    option.recs ~> option.rec
    list_all2_def ~> list_all2_iff
    set.simps ~> set_simps (or the slightly different "list.set")
    map.simps ~> list.map
    hd.simps ~> list.sel(1)
    tl.simps ~> list.sel(2-3)
    the.simps ~> option.sel
  INCOMPATIBILITY.

* The following map functions and relators have been renamed:
    sum_map ~> map_sum
    map_pair ~> map_prod
    prod_rel ~> rel_prod
    sum_rel ~> rel_sum
    fun_rel ~> rel_fun
    set_rel ~> rel_set
    filter_rel ~> rel_filter
    fset_rel ~> rel_fset (in "Library/FSet.thy")
    cset_rel ~> rel_cset (in "Library/Countable_Set_Type.thy")
    vset ~> rel_vset (in "Library/Quotient_Set.thy")

* New theory:
    Cardinals/Ordinal_Arithmetic.thy

* Theory reorganizations:
  * Big_Operators.thy ~> Groups_Big.thy and Lattices_Big.thy
